<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="3"
    android:columnCount="3"
    android:orientation="horizontal"

    tools:context="com.example.chandrassekhar.gridlayout.MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn1"
        android:gravity="center"
        android:layout_gravity="top|end"
        android:onClick="color"

        />
    <Button
        android:id="@+id/btn2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn2"
        android:gravity="center"
        android:layout_gravity="center"

        />
    <Button
        android:id="@+id/btn3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn3"
        android:gravity="center"
        android:layout_gravity="top|end"

        />
    <Button
        android:id="@+id/btn4"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn4"
        android:gravity="center"
        android:layout_gravity="center|end"

        />
    <Button
        android:id="@+id/btn5"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn5"
        android:gravity="center"
        android:layout_gravity="center|center"

        />
    <Button
        android:id="@+id/btn6"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn6"
        android:gravity="center"
        android:layout_gravity="center|end"

        />
    <Button
        android:id="@+id/btn7"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn7"
        android:gravity="center"
        android:layout_gravity="bottom|end"

        />
    <Button
        android:id="@+id/btn8"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn8"
        android:gravity="center"
        android:layout_gravity="center_horizontal"

        />
    <Button
        android:id="@+id/btn9"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/btn9"
        android:gravity="center"
        android:layout_gravity="bottom|end"

        />

</GridLayout>
